[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snakedream"
description = "Python interface for a Daydream controller."
version = "0.6.1"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Zack Didcott"}
]
maintainers = [
  {name = "Zack Didcott"}
]
dependencies = [
  "bleak",
  "matplotlib",
  "python-uinput"
]
requires-python = ">= 3.10"

[project.urls]
Homepage = "https://github.com/Zedeldi/snakedream"

[project.scripts]
snakedream-mouse = "snakedream.__main__:main"

[tool.isort]
profile = "black"

[tool.mypy]
enable_error_code = [
  "ignore-without-code"
]
show_error_codes = true
warn_unused_ignores = true
